syntax = "proto3";
option go_package = "github.com/SpeedReach/monify";


service GroupService{
  rpc CreateGroup(CreateGroupRequest) returns (CreateGroupResponse) {}
}

message CreateGroupRequest{
  string name = 1;
  string description =2;
}

message CreateGroupResponse{
  string group_id = 1;
}





